# b3-analytics-main

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
b3analytics/config/: assets.py  settings.py
b3analytics/domain/: backtesting.py  engine.py  indicators.py  levels.py  portfolio.py  portfolio_risk.py  portfolio_setup.py  setup_classifier.py  trend.py
b3analytics/infrastructure/: ai_analyst.py  ai_cache.py  ai_config.py  cache.py  data_provider.py  fetcher.py  macro.py  portfolio_import.py  portfolio_store.py
b3analytics/presentation/: components.py  setup_badges.py  sidebar.py  theme.py
pages/: backtesting.py  carteira.py  comparacao.py  configuracoes.py  grafico.py  ia.py  setups.py  visao_geral.py
tests/: test_ai_local.py  test_data_provider.py  test_e2e.py  test_integration.py  test_pages.py  test_portfolio.py  test_portfolio_dashboard.py  test_portfolio_import.py  test_portfolio_risk.py  test_portfolio_setup.py  test_security.py  test_setup_badges.py  test_setup_classifier.py  test_system.py  test_ui_flows.py  test_unit.py
