[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b3-analytics"
version = "1.0.0"
description = "Sistema de análise técnica e setups de trade para ações da B3"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = []

dependencies = [
    "streamlit==1.57.0",
    "plotly==6.7.0",
    "pandas==3.0.3",
    "numpy==2.4.6",
    "yfinance==1.3.0",
    "backtesting==0.6.5",
    "scipy==1.17.1",
    "requests==2.34.2",
    "pytz",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "playwright==1.60.0",
    "pytest-playwright==0.7.0",
]
dev = ["ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["b3analytics*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "timeout(seconds): marca testes que podem demorar em integrações locais",
    "e2e: testes de interface Streamlit com Playwright",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402", "E501", "E701", "E702", "E741"]
